<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
    <string name="app_name">Trove NLA</string>
    <string name="main_fragment">com.etapps.trovenla.ResultsFragment</string>
    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_results_number_label">Number of Results</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_results_key" translatable="false">results_nr</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_results_default" translatable="false">10</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast for today: %1$s with a high of %2$s and low of %3$s.
    </string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>


    <!-- Share format [CHAR LIMIT=NONE]-->
    <string name="format_share">
        Weather for <xliff:g id="date">%1$s</xliff:g> in <xliff:g id="location">%2$s</xliff:g>:
        A high of <xliff:g id="high">%3$s</xliff:g> and low of
        <xliff:g id="low">%4$s</xliff:g></string>
    <!-- SyncAdapter related -->
    <string name="sync_account_type">trovenla.etapps.com</string>
    <string name="sync_authority">"com.etapps.trovenla"</string>
    <string name="content_authority">com.etapps.trovenla</string>
    <string name="menu_search">Search</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search for …</string>
    <string name="books_data">content://com.etapps.trovenla.data.SuggestionProvider/</string>
    <string name="settings_description">Books on Trove.com.au</string>
    <string name="about_pref">Version</string>
    <string name="about_pref_summ"> 1 (Beta)</string>
    <string name="about_pref_title">Version</string>
    <string name="author_pref_summ">Emanuele Tonello</string>
    <string name="author_pref_title">Author</string>
    <string name="prefs_web_page">Trove Website</string>
    <string name="list_search_header">Last Search Results</string>
    <string name="suggestions_content_authority">com.etapps.trovenla.data.SuggestionProvider</string>
    <string name="updlib_pref_title">Update Libraries List</string>
    <string name="updlib_pref_summ">Update the list of libraries</string>
    <string name="update_lib_pref">update_lib</string>
    <string name="action_go">Go To Page</string>
    <string name="action_buy">Buy</string>
    <string name="no_results_string">No Results. Retry</string>
    <string name="borrow_label_details">Available to borrow at</string>
    <string name="year_sublabel_detail">Year</string>
    <string name="version_sublabel_details">Versions</string>
    <string name="buy_sublabel_details">Buy</string>
    <string name="available_label_detail">Available at</string>
    <string name="title_book_list">Books</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="title_news_article">Newspaper Article</string>
    <string name="libraries">Where to Borrow</string>

    <string name="title_activity_prefs">Settings</string>
    <string name="newspapers">Newspapers</string>
    <string name="pictures">Pictures</string>
    <string name="pref_header_general">General</string>
    <string name="slash">/</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas massa non lacus rhoncus, eu ornare velit imperdiet. Nam quis dolor vel enim placerat consectetur a at orci. Curabitur neque quam, laoreet eu lacus vel, sagittis feugiat purus. Sed rhoncus lacinia libero. Suspendisse varius, magna at ornare porta, tortor nunc lobortis leo, eu iaculis est mi et tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut consectetur congue neque eget elementum. Sed viverra libero at massa viverra gravida. Sed sollicitudin magna vitae viverra aliquam.

Duis in lacus fringilla, consequat sapien et, molestie ex. Donec et diam nec mi fermentum maximus. Mauris finibus auctor elit sed lobortis. Phasellus vitae dapibus risus. Phasellus lacinia ex ut rhoncus semper. Mauris suscipit, velit et malesuada laoreet, velit dolor tincidunt ante, ac mattis arcu augue placerat velit. Curabitur vel diam erat. Mauris vestibulum vestibulum dui in rutrum. Duis pretium posuere mi, a efficitur ipsum porta sed. Sed tincidunt eros id massa placerat rhoncus. Praesent elementum, ante laoreet feugiat rhoncus, massa enim venenatis arcu, at mattis libero magna et purus. Maecenas eu vestibulum ligula. Nullam iaculis pretium arcu, id sodales nibh volutpat quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam sem felis, varius eget nibh ac, mollis gravida libero. Phasellus ac mattis orci.

Nam quis lorem non nunc semper imperdiet eget id tellus. Donec vehicula diam quis lacus gravida, in fermentum risus rhoncus. Aliquam erat volutpat. Nunc quis malesuada neque, nec maximus justo. Donec pulvinar nibh sit amet dui sagittis ultrices. Suspendisse ultrices, justo iaculis egestas suscipit, libero odio ullamcorper lacus, a dapibus arcu lectus a erat. Proin vel eros faucibus, feugiat sem vitae, tempus erat. Aliquam consectetur ipsum accumsan, finibus mi et, feugiat nisi. Nam est dui, mollis quis luctus at, feugiat ut leo. Maecenas sit amet risus sit amet turpis ullamcorper iaculis sit amet ut arcu. Donec nec accumsan risus. Nulla molestie non neque ac cursus. Proin nisi turpis, viverra vel leo ac, faucibus consequat leo.</string>
    <string name="action_launch">Launch URL</string>
    <string name="action_pdf">Download PDF</string>
    <string name="action_font_up">Increase Font Size</string>
    <string name="action_font_down">Derease Font Size</string>
    <string name="intro_text">Start a search to explore the Trove database</string>
</resources>
