<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_launch"
        android:icon="@drawable/ic_launch_black_24dp"
        android:title="@string/action_launch"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pdf"
        android:icon="@drawable/ic_picture_as_pdf_black_24dp"
        android:title="@string/action_pdf"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
</menu>
